// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequestContext should have a request object for platform amp, bbcOrigin undefined, statsDestination 598286 & statsPageIdentifier persian.articles.c0000000000o.page 1`] = `
Array [
  <span>
    amp
  </span>,
  <span>
    true
  </span>,
  <span>
    https://foobar.com
  </span>,
  <span>
    598286
  </span>,
  <span>
    persian.articles.c0000000000o.page
  </span>,
]
`;

exports[`RequestContext should have a request object for platform canonical, bbcOrigin undefined, statsDestination 598286 & statsPageIdentifier persian.articles.c0000000000o.page 1`] = `
Array [
  <span>
    canonical
  </span>,
  <span>
    true
  </span>,
  <span>
    https://foobar.com
  </span>,
  <span>
    598286
  </span>,
  <span>
    persian.articles.c0000000000o.page
  </span>,
]
`;

exports[`RequestContext should have a request object for platform default, bbcOrigin https://www.bbc.co.uk, statsDestination 598286 & statsPageIdentifier persian.articles.c0000000000o.page 1`] = `
Array [
  <span>
    default
  </span>,
  <span>
    true
  </span>,
  <span>
    https://www.bbc.co.uk
  </span>,
  <span>
    598286
  </span>,
  <span>
    persian.articles.c0000000000o.page
  </span>,
]
`;

exports[`RequestContext should have a request object for platform default, bbcOrigin undefined, statsDestination 598286 & statsPageIdentifier persian.articles.c0000000000o.page 1`] = `
Array [
  <span>
    default
  </span>,
  <span>
    true
  </span>,
  <span>
    https://foobar.com
  </span>,
  <span>
    598286
  </span>,
  <span>
    persian.articles.c0000000000o.page
  </span>,
]
`;
